[package]
edition = "2021"
name = "hello-actix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.5.4"
actix-web = "3.3.3"
chrono = "0.4.19"
log = "0.4.14"
rand = "0.8.4"
simplelog = "0.11.2"
