[package]
edition = "2021"
name = "hello-actix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-broker = "0.3.1"
actix-cors = "0.5.4"
actix-daemon-utils = "0.4.2"
actix-files = "0.5.0"
actix-web = "3.3.3"
actix-web-actors = "3.0.0"
chrono = "0.4.19"
log = "0.4.14"
rand = "0.8.4"
simplelog = "0.11.2"
tokio = {version = "1.16.1", features = ["time"]}
